# comment-rs

./: Cargo.toml  README.md  graphql.config.yaml
backend/comments-rs-cli/: Cargo.toml
backend/comments-rs-cli/src/: main.rs
backend/comments-rs-core/: Cargo.toml
backend/comments-rs-core/src/: data.rs  error.rs  traits.rs
backend/comments-rs-google/: Cargo.toml
backend/comments-rs-google/src/: lib.rs
backend/comments-rs-graphql/: Cargo.toml  client.http  schema.graphql
backend/comments-rs-graphql/src/: lib.rs
backend/comments-rs-memdb/: Cargo.toml
backend/comments-rs-memdb/src/: lib.rs
backend/comments-rs-postgres/: Cargo.toml
comments-rs-cli/: Cargo.toml
comments-rs-cli/src/: main.rs
comments-rs-core/: Cargo.toml
comments-rs-core/src/: data.rs  error.rs  lib.rs  traits.rs
comments-rs-graphql/: Cargo.toml  schema.graphql
comments-rs-graphql/src/: lib.rs
comments-rs-graphql/test/: query-root.graphql  root-query.graphql  users-query.graphql
comments-rs-memdb/: Cargo.toml
comments-rs-memdb/src/: lib.rs
comments-rs-postgres/: Cargo.toml
frontend/comments-rs-cli/: Cargo.toml
frontend/comments-rs-core/: Cargo.toml
frontend/comments-rs-core/src/: error.rs  lib.rs  structs.rs  traits.rs
frontend/comments-rs-frontend/: Cargo.toml  index.html
frontend/comments-rs-frontend/src/: main.rs
frontend/comments-rs-google/: Cargo.toml
frontend/comments-rs-graphql/: Cargo.toml
frontend/comments-rs-graphql/query/: thread_query.graphql
frontend/comments-rs-graphql/src/: lib.rs
frontend/comments-rs-graphql/tests/: node.rs
xtask/: Cargo.toml
xtask/src/: main.rs
