[package]
name = "comments-rs-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
tokio = { version = "1.15", features = ["full"] }
futures = "0.3"
comments-rs-core = { path = "../comments-rs-core" }
comments-rs-graphql = { path = "../comments-rs-graphql" }
comments-rs-memdb = { path = "../comments-rs-memdb" }
