[package]
name = "comments-rs-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = { version = "0.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
regex = "1.5"