[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3.0"
comments-rs-graphql = { path = "../comments-rs-graphql" }
clap = { version = "3.0", features = ["derive"] }