[package]
name = "comments-rs-google-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comments-rs-core-backend = { path = "../comments-rs-core" }
reqwest = "0.11.9"
serde = "1.0"
serde_json = "1.0"
jsonwebtoken = "7.2"

[dev-dependencies]
tokio = { version = "1.15", features = ["full"] }
