[package]
name = "comments-rs-graphql-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comments-rs-core-backend = { path = "../comments-rs-core" }
async-graphql = "3.0"
async-graphql-tide = "3.0"
tide = "0.16"

[dev-dependencies]
tokio = { version = "1.15", features = ["full"] }
graphql_client = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
comments-rs-memdb-backend = { path = "../comments-rs-memdb" }