[package]
name = "comments-rs-graphql-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
graphql_client = "0.10"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
comments-rs-core-frontend = { path = "../comments-rs-core" }

[dev-dependencies]
wasm-bindgen-test = "0.3"